Fix the scrollbar on added books

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,9 +10,10 @@ header{
         line-height: 90%;
         span{
             background-color: #252f40;
-            padding: .2em;
-            font-weight: 900;
-            text-transform: uppercase;
+            padding: .4em;
+            font-weight: 700;
+            text-transform: uppercase; 
+            color:white;
         }
     }
 }
@@ -24,4 +25,9 @@ body{
 
 main{
     background-color: transparent;
+
+    .unread #books, .read #completed-books{
+        overflow-x: hidden;
+        padding: 0 1em;
+    }
 }
